// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    25
     
    expenses
     totaling 
    $0.00
  </h3>
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totaling 
    $1.00
  </h3>
</div>
`;
